# src/EstadisticaJugador/estadistica-jugador.routes.ts
@@ -2,10 +2,11 @@ import { Router } from 'express';
 import { 
   actualizarEstadisticasJornada, 
   getPuntajesPorJornada,
-  getPuntajeJugadorPorJornada 
+  getPuntajeJugadorPorJornada,
+  getHistorialEstadisticasJugador
 } from './estadistica-jugador.controller.js';
 import { requireAdmin, requireAuth } from '../Auth/auth.requires.js';
-import { jornadaIdParamsSchema, jornadaJugadorParamsSchema } from './estadistica-jugador.schema.js';
+import { jornadaIdParamsSchema, jornadaJugadorParamsSchema, jugadorIdParamsSchema} from './estadistica-jugador.schema.js';
 import { validateParams } from '../shared/zod/validate.js';
 
 export const estadisticaJugadorRouter = Router();
@@ -13,3 +14,4 @@ export const estadisticaJugadorRouter = Router();
 estadisticaJugadorRouter.post('/jornadas/:jornadaId/actualizar', requireAdmin, validateParams(jornadaIdParamsSchema), actualizarEstadisticasJornada);
 estadisticaJugadorRouter.get('/jornadas/:jornadaId/puntajes', requireAuth, validateParams(jornadaIdParamsSchema), getPuntajesPorJornada);
 estadisticaJugadorRouter.get('/jornadas/:jornadaId/jugadores/:jugadorId', requireAuth, validateParams(jornadaJugadorParamsSchema), getPuntajeJugadorPorJornada);
+estadisticaJugadorRouter.get('/jugador/:jugadorId/historial', requireAuth, validateParams(jugadorIdParamsSchema), getHistorialEstadisticasJugador);
