# src/HistorialPrecio/historial-precio.routes.ts
@@ -1,6 +1,6 @@
 import { Router } from 'express';
 import { HistorialPrecioController } from './historial-precio.controller.js';
-import { clubIdParamsSchema, jornadaIdParamsSchema } from './historial-precio.schema.js';
+import { clubIdParamsSchema, jornadaIdParamsSchema, jugadorIdParamsSchema} from './historial-precio.schema.js';
 import { validateParams } from '../shared/zod/validate.js';
 import { requireAuth } from '../Auth/auth.requires.js';
 
@@ -10,3 +10,4 @@ historialPrecioRouter.get('/preview/:clubId', requireAuth, validateParams(clubId
 historialPrecioRouter.post('/calcular/:clubId', requireAuth, validateParams(clubIdParamsSchema), HistorialPrecioController.calcularYGuardarPreciosClub);
 historialPrecioRouter.post('/calcular-todos', requireAuth, HistorialPrecioController.calcularYGuardarTodosLosClubes);
 historialPrecioRouter.post('/actualizar-por-rendimiento/:jornadaId', requireAuth, validateParams(jornadaIdParamsSchema), HistorialPrecioController.actualizarPreciosPorRendimiento);
+historialPrecioRouter.get('/jugador/:jugadorId', requireAuth, validateParams(jugadorIdParamsSchema), HistorialPrecioController.getHistorialPreciosJugador);
